--- a/proposal/abstract.tex
+++ b/proposal/abstract.tex
@@ -14,7 +14,7 @@ A wide variety of techniques for attacking this problem from different angles ha
 %VSA
 %Jakstab
 %Types shit
-Previous work in analyzing binary code has performed type recovery\cite{bitr}, variable identification\cite{divine}, control flow recovery\cite{jakstab,phoenix}, and value analysis\cite{vsa}.
+Previous work in analyzing binary code has performed type recovery~\cite{bitr}, variable identification~\cite{divine}, control flow recovery~\cite{jakstab,phoenix}, and value analysis~\cite{vsa}.
 However, this work tends to have issues with the relative expense of running the analyses, the coupling between analyses, and the integration of the current state of the art in each area.
 Co-dependency of analyses becomes more relevant within the realm of binary analysis in particular because abstractions designed for independent reasoning have been stripped away.
 While this is most prevalent in control flow analysis, it finds its way into nearly every part of binary analysis.
@@ -27,7 +27,7 @@ I intend to build \sysname, a logic language inspired by Datalog with several fe
 %Combining both dynamic and static analyses leads to greater dominance
 I hope to use this system to demonstrate how the use of logic languages for communication can make writing interdependent analyses easier.
 I want to explore the formal properties of the \sysname\ langugage, specifically with respect to termination and monotonicity of reasoning off subsumed facts.
-I will also evaluate the power of combining analyses via \sysname which have been traditionally examined separately.
+I will also evaluate the power of combining analyses via \sysname\ which have been traditionally examined separately.
 
 %Work Plan
 \sysname\ provides a way to mesh the many existing styles of analysis together, taking into account the potential for nontermination or high cost of various analyses. This thesis will provide semantics for the \sysname\ language, an implementation of a program which actually runs the language, and example applications coordinating multiple analyses to achieve better results than they could achieve alone.
