Removed words david does not like

--- a/proposal/abstract.tex
+++ b/proposal/abstract.tex
@@ -20,7 +20,7 @@ Co-dependency of analyses becomes more relevant within the realm of binary analy
 While this is most prevalent in control flow analysis, it finds its way into nearly every part of binary analysis.
 
 %This is Holmes
-I intend to build \sysname, a logic language inspired by Datalog with several features geared towards the ability to use a logic program as a means of coordinating several independent analyses.
+I intend to build \sysname, a logic language inspired by Datalog with features geared towards the ability to use a logic program as a means of coordinating independent analyses.
 %Hope to show:
 %Logic language makes writing dependent analyses easier
 %Proof properties
@@ -30,4 +30,4 @@ I want to explore the formal properties of the \sysname\ langugage, specifically
 I will also evaluate the power of combining analyses via \sysname\ which have been traditionally examined separately.
 
 %Work Plan
-\sysname\ provides a way to mesh the many existing styles of analysis together, taking into account the potential for nontermination or high cost of various analyses. This thesis will provide semantics for the \sysname\ language, an implementation of a program which actually runs the language, and example applications coordinating multiple analyses to achieve better results than they could achieve alone.
+\sysname\ provides a way to mesh existing styles of analysis together, taking into account the potential for nontermination or high cost of analyses. This thesis will provide semantics for the \sysname\ language, an implementation of a program which actually runs the language, and example applications coordinating multiple analyses to achieve better results than they could achieve alone.
